# databricks-agent

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/: cyber-security.md  dashboard-authoring.md  data-catalog-lineage.md  data-governance-traceability.md  data-transformation.md  databricks-connect.md  delta-modeling.md  dlt-pipelines.md  medallion-architecture.md  metric-glossary.md  performance-scale.md  project-management.md  security-governance.md  source-integration.md  spark-sql-mastery.md  testing-validation.md  time-series-data.md
src/databricks_agent/: __init__.py  catalog.py  cli.py  clusters.py  connect.py  doctor.py  jobs.py  pipelines.py  sql.py
src/databricks_agent/skills/: installer.py
src/databricks_agent/web/: app.py
tests/: test_catalog.py  test_cli.py  test_skills_install.py  test_sql.py
